# discrete_pid

./: Cargo.toml  LICENSE  README.md  cbindgen.toml
.github/workflows/: ci.yml
benches/: pid_benchmark.rs
examples/: README.md  plot_quadrotor_trajectory.py  plot_step_response.py  quadrotor_control.rs  quadrotor_sim.rbl  step_response.rs
include/: pid_config.h
src/: ffi.rs  lib.rs  pid.rs  sim.rs  time.rs
tests/: README.md  data.rs  fixtures.rs  generate_test_data.m  pid.rs  sim.rs
