[package]
name = "discrete_pid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
num-traits = { version = "0.2.19", default-features = false }
nalgebra = { version = "0.33.2", optional = true }
thiserror = { version = "2.0.12", optional = true }

[features]
default = ["std"]
std = ["dep:thiserror"]
simulation = ["nalgebra", "std"]
