[package]
name = "discrete_pid"
version = "0.1.0"
edition = "2021"
authors = ["H S Helson Go"]
readme = "README.md"
license = "MIT"
description = "A correctness-first, no_std-friendly discrete PID controller"
repository = "https://github.com/Hs293Go/discrete_pid"
documentation = "https://docs.rs/discrete_pid"
keywords = ["pid", "control", "no_std", "embedded"]
categories = ["embedded", "science", "simulation", "no-std", "mathematics"]
rust-version = "1.65"

[dependencies]
approx = "0.5.1"
num-traits = { version = "0.2.19", default-features = false }
nalgebra = { version = "0.33.2", optional = true }
thiserror = { version = "2.0.12", optional = true }
criterion = { version = "0.5", optional = true }

[features]
default = ["std"]
std = ["dep:thiserror"]
simulation = ["nalgebra", "std"]
bench = ["std", "dep:criterion"] # benchmark-specific feature

[[bench]]
name = "pid_benchmark"
harness = false
