[package]
name = "discrete_pid"
version = "0.1.0"
edition = "2021"
authors = ["H S Helson Go <hellston20a@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "A PID controller for robotics and discrete control systems"
repository = "https://github.com/Hs293Go/discrete_pid"
documentation = "https://docs.rs/discrete_pid"
keywords = ["pid", "control", "no_std", "embedded"]
categories = [
  "embedded",
  "science::robotics",
  "aerospace::drones",
  "no-std",
  "mathematics",
]
rust-version = "1.65"

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
nalgebra = { version = "0.33.2", optional = true }
thiserror = { version = "2.0.12", optional = true }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5"

[features]
default = ["std"]
std = ["dep:thiserror"]
simulation = ["nalgebra", "std"]

[[bench]]
name = "pid_benchmark"
harness = false
